configs/kubernetes/proxies/nzbget.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6789
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nzbget
subsets:
  - addresses:
      - ip: 192.168.128.105
    ports:
      - port: 6789
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: nzbget.home.frontenac.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nzbget
            port: 
              number: 80
  tls:
  - hosts:
    - nzbget.home.frontenac.tech
    secretName: nzbget.home.frontenac.tech
