configs/kubernetes/proxies/ombi.yaml
apiVersion: v1
kind: Service
metadata:
  name: ombi
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ombi
subsets:
  - addresses:
      - ip: 192.168.128.107
    ports:
      - port: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: ombi.home.frontenac.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ombi
            port: 
              number: 80
  tls:
  - hosts:
    - ombi.home.frontenac.tech
    secretName: ombi.home.frontenac.tech
