configs/kubernetes/proxies/paperless.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: paperless
subsets:
  - addresses:
      - ip: 192.168.128.106
    ports:
      - port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: paperless.home.frontenac.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless
            port: 
              number: 80
  tls:
  - hosts:
    - paperless.home.frontenac.tech
    secretName: paperless.home.frontenac.tech
