configs/kubernetes/proxies/plex.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 32400
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex
subsets:
  - addresses:
      - ip: 192.168.128.101
    ports:
      - port: 32400
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: plex.home.frontenac.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port: 
              number: 80
  tls:
  - hosts:
    - plex.home.frontenac.tech
    secretName: plex.home.frontenac.tech
