configs/kubernetes/proxies/seafile.yaml
apiVersion: v1
kind: Service
metadata:
  name: seafile
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: seafile
subsets:
  - addresses:
      - ip: 192.168.128.104
    ports:
      - port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: seafhttp
spec:
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: v1
kind: Endpoints
metadata:
  name: seafhttp
subsets:
  - addresses:
      - ip: 192.168.128.104
    ports:
      - port: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seafile
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-forwarded-header: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: seafile.home.frontenac.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seafile
            port: 
              number: 8000
      - path: /seafhttp(.*)$
        pathType: Prefix
        backend:
          service:
            name: seafhttp
            port: 
              number: 8082
  tls:
  - hosts:
    - seafile.home.frontenac.tech
    secretName: seafile.home.frontenac.tech
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: seafhttp
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     cert-manager.io/cluster-issuer: letsencrypt-prod
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/use-forwarded-header: "true"
#     nginx.ingress.kubernetes.io/proxy-body-size: 1024m
# spec:
#   rules:
#   - host: seafhttp.home.frontenac.tech
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: seafhttp
#             port: 
#               number: 8082
#   tls:
#   - hosts:
#     - seafhttp.home.frontenac.tech
#     secretName: seafhttp.home.frontenac.tech
