configs/kubernetes/proxies/sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8989
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sonarr
subsets:
  - addresses:
      - ip: 192.168.128.102
    ports:
      - port: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.128.3/32"
spec:
  rules:
  - host: sonarr.home.frontenac.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port: 
              number: 80
  tls:
  - hosts:
    - sonarr.home.frontenac.tech
    secretName: sonarr.home.frontenac.tech
