configs/kubernetes/proxies/unifi.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
subsets:
  - addresses:
      - ip: 192.168.1.100
    ports:
      - port: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: unifi.home.frontenac.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi
            port: 
              number: 80
  tls:
  - hosts:
    - unifi.home.frontenac.tech
    secretName: unifi.home.frontenac.tech
